--- a/services.html
+++ b/services.html
@@ -10,53 +10,87 @@
 </head>
 </head>
 <body>
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Navbar</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Navbar</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<footer class="container-fluid">
-    <div class="row">
+    <footer class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-sm-7 pOff">
-                <div class="col-xs-6 col-sm-7 ">
-                    <h3> REGULATORY REQUIREMENTS </h3>
-                    <p> Regulatory Information<br>
-                        Pension Reform Act <br>
-                        Whistle Blowing<br>
-                        Code of Ethics and Conduct<br>
-                        Retired and Terminal Benefits
-                    </p>
-                </div>
-                <div class="col-xs-6 col-sm-5 pOff">
-                    <h3> QUICK LINKS </h3>
-                    <p> Blog <br>
-                        Enroll Now<br>
-                        Benefits<br>
-                        Our Philosophy<br>
-                        Branch Network<br>
-                    </p>
+            <hr>
+            <div class="col-xs-12 col-sm-6">
+                <h5> LATEST NEWS </h5>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <li><a href="#"><img align="left" src="images/vas.png" height="50px" width="50px"/><h6>Leadway unveils value added services</h6></a><p class=newsLine> Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p></li>
+                <li><a href="#"><img align="left" src="images/vas.png" height="50px" width="50px"/><h6>Leadway unveils value added services</h6></a> <p class=newsLine> Following our masterplan to becoma a consumer oriented brand we have implemented... Read more </p></li>
+            </div>
+        </div>
+        <div class="row">
+            <div role="navigation" class="col-md-6 exp navbar navbar-toggleable-md">
+                <button type="button" class="btn col-xs-12" data-toggle="collapse" data-target="#sign" aria-expanded="false" aria-controls="sign">Sign-Up for News Letter</button>
+                <div class="collapse navbar-collapse" id="sign">
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="E-mail Address" required>
+                        </div>
+                        <div align="center"><button type="button" class="btn btn-outline-secondary">Sign Up</button></div>
+                    </form>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-5 leaderboard pOff">
+            <div role="navigation" class="col-md-6 navbar navbar-toggleable-md">
+                <button type="button" class="btn col-xs-12" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</button>
+                <div class="collapse navbar-collapse" id="feed">
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="E-mail Address" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
+                        </div>
+                        <div align="center"><button type="button" class="btn btn-outline-secondary">Post Feedback</button></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <h3> REGULATORY REQUIREMENTS </h3>
+                <p> Regulatory Information<br>
+                    Pension Reform Act <br>
+                    Whistle Blowing<br>
+                    Code of Ethics and Conduct<br>
+                    Retired and Terminal Benefits
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h3> QUICK LINKS </h3>
+                <p> Blog <br>
+                    Enroll Now<br>
+                    Benefits<br>
+                    Our Philosophy<br>
+                    Branch Network<br>
+                </p>
+            </div>
+            <div class="col-md-4">
                 <h3> LEADERBOARD </h3>
                 <table class="table table-responsive">
                     <thead>
@@ -83,9 +117,7 @@
                         <td> 9,010 </td>
                     </tr>
                     <tr>
-                        <td colspan="2"> <i class="fa fa-facebook socialMedia" aria-hidden="true"></i>&nbsp &nbsp
-                            <i class="fa fa-twitter socialMedia" aria-hidden="true"></i>&nbsp &nbsp
-                            <i class="fa fa-linkedin socialMedia" aria-hidden="true"></i>&nbsp &nbsp </td>
+                        <td colspan="2"><i class="fa fa-facebook" aria-hidden="true"></i><i class="fa fa-twitter" aria-hidden="true"></i><i class="fa fa-linkedin" aria-hidden="true"></i></td>
                         <td> View all </td>
                     </tr>
                     </tbody>
@@ -93,59 +125,22 @@
             </div>
         </div>
         <div class="row">
-            <hr>
-            <div class="col-xs-12 col-sm-6">
-                <h5> LATEST NEWS </h5>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <div>
-                    <ul>
-                        <li><a href="#"><img class="newsIcon" align="left" src="images/vas.png" alt=""/> <h5 class="heavyText headline"> Leadway unveils value added services </h5></a><p class=newsLine> Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p></li>
-                        <li><a href="#"><img class="newsIcon" align="left" src="images/vas.png" alt=""/> <h5 class="heavyText headline"> Leadway unveils value added services </h5></a> <p class=newsLine> Following our masterplan to becoma a consumer oriented brand we have implemented... Read more </p></li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#">Site Map</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Privacy Policy</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Legal</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Terms & Conditions</a></li>
+            </ul>
         </div>
         <div class="row">
-            <div role="navigation" class="col-md-6 exp navbar navbar-toggleable-md">
-                <button type="button" class="btn col-xs-12" data-toggle="collapse" data-target="#sign" aria-expanded="false" aria-controls="sign">Sign-Up for News Letter</button>
-                <div class="col-xs-12 offset-sm-2 col-sm-8 collapse navbar-collapse" id="sign">
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="E-mail Address" required>
-                        </div>
-                        <div align="center"><button type="button" class="btn btn-outline-secondary">Sign Up</button></div>
-                    </form>
-                </div>
-            </div>
-            <div role="navigation" class="col-md-6 navbar navbar-toggleable-md">
-                <button type="button" class="btn col-xs-12" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</button>
-                <div class="col-xs-12 offset-sm-2 col-sm-8 collapse navbar-collapse" id="feed">
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="E-mail Address" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
-                        </div>
-                        <div align="center"><button type="button" class="btn btn-outline-secondary">Post Feedback</button></div>
-                    </form>
-                </div>
-            </div>
+            <div class="col-md-4"><img src="images/pencom.png" alt=""/></div>
+            <div class="col-md-4">Copyright Leadway Pensure 2017</div>
+            <div class="col-md-4">Web Design & Content by iNspire</div>
         </div>
-        <div class="row copyright">
-            <div class="col-xs-12 col-sm-4"> <img src="images/pencom.png" alt="" />
-            </div>
-            <div class="col-xs-6 col-sm-4 gap"> Copyright Leadway Pensure 2017 </div>
-            <div class="col-xs-6 col-sm-4 gap"> Web Design & Content by iNspire  </div>
-        </div>
-    </div>
-    <div class="row ball1" data-toggle="tooltip" title="Share" data-placement="left"><i class="fa fa-share-alt fa-lg" aria-hidden="true"></i></div>
-    <div class="row ball2" data-toggle="tooltip" title="Print" data-placement="left"><i class="fa fa-print fa-lg" aria-hidden="true"></i></div>
-    <a class="row ball3" href="#top" data-toggle="tooltip" title="Back to Top" data-placement="left"><i class="fa fa-arrow-up fa-lg" aria-hidden="true"></i></a>
-</footer>
-
+        <div class="ball1" data-toggle="tooltip" title="Share" data-placement="left"><i class="fa fa-share-alt fa-lg" aria-hidden="true"></i></div>
+        <div class="ball2" data-toggle="tooltip" title="Print" data-placement="left"><i class="fa fa-print fa-lg" aria-hidden="true"></i></div>
+        <a class="ball3" href="#top" data-toggle="tooltip" title="Go to Top" data-placement="left"><i class="fa fa-arrow-up fa-lg" aria-hidden="true"></i></a>
+    </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
