--- a/services.html
+++ b/services.html
@@ -39,9 +39,31 @@
             <div class="col-xs-12 col-sm-6">
                 <h5> LATEST NEWS </h5>
             </div>
-            <div class="col-xs-12 col-sm-6">
-                <li><a href="#"><img align="left" src="images/vas.png" height="50px" width="50px"/><h6>Leadway unveils value added services</h6></a><p class=newsLine> Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p></li>
-                <li><a href="#"><img align="left" src="images/vas.png" height="50px" width="50px"/><h6>Leadway unveils value added services</h6></a> <p class=newsLine> Following our masterplan to becoma a consumer oriented brand we have implemented... Read more </p></li>
+            <div class="col-xs-12 col-sm-6 newsFeed">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <div class="media">
+                                <img class="d-flex align-self-center mr-3" src="images/vas.png" height="50px" width="50px">
+                                <div class="media-body">
+                                    <h5 class="mt-0">Leadway unveils value added services</h5>
+                                    <p>Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="media">
+                                <img class="d-flex align-self-center mr-3" src="images/vas.png" height="50px" width="50px">
+                                <div class="media-body">
+                                    <h5 class="mt-0">Leadway unveils value added services</h5>
+                                    <p>Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="row">
