--- a/services.html
+++ b/services.html
@@ -7,6 +7,9 @@
     <!-- Bootstrap and Custom CSS files-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/design.css">
+    <!--Google Fonts and Fonts Awesome links -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 </head>
 <body>
@@ -32,70 +35,108 @@
             </ul>
         </div>
     </nav>
-
-    <footer class="container-fluid">
+    <div class="container-fluid" id="top">
+        <div class="row" style="padding-bottom: 20px">
+            <div class="col-md-10 offset-md-1 prod-banner">
+                <img src="images/pba.png">
+            </div>
+        </div>
         <div class="row">
-            <hr>
-            <div class="col-xs-12 col-sm-6">
-                <h5> LATEST NEWS </h5>
+            <div class="col-md-7 offset-md-1" style="padding-bottom: 20px">
+                <p> The Retirement Savings Account was initiated by the Federal Government under the Pensions Reform Act 2004
+                and is used to set aside money towards an individual’s retirement. The new pension Reform Act 2014 requires
+                the employer and employee to contribute a minimum total of 18% of the employee’s monthly emoluments (basic
+                salary, housing and transport) to a Retirement Savings Account (RSA) which will be managed by a private
+                sector Pension Fund Administrator (PFA).</p>
+                <h4 class="text-center" style="padding: 10px 0">Your new RSA account starts here</h4>
+                <div class="row">
+                    <div class="col-md-4 info-icon">
+                        <img class="img-fluid" src="images/form.png" height="96" width="96"/><br><br>
+                        <span>Click to Enroll now</span>
+                    </div>
+                    <div class="col-md-4 info-icon">
+                        <img class="img-fluid" src="images/phone.png" height="96" width="96"/><br><br>
+                        <span>Wait for SMS Notification on account registration</span>
+                    </div>
+                    <div class="col-md-4 info-icon">
+                        <img class="img-fluid" src="images/diploma.png" height="96" width="96"/><br><br>
+                        <span>Receive membership certificate via mail</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 info-icon">
+                        <img class="img-fluid" src="images/talk.png" height="96" width="96"/><br><br>
+                        <span>Inform Employer / HR on registration status</span>
+                    </div>
+                    <div class="col-md-4 info-icon">
+                        <img class="img-fluid" src="images/cloud.png" height="96" width="96"/><br><br>
+                        <span>Login online here</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 list-group">
+                <a href="#" class="list-group-item">Retirement Savings Account</a>
+                <a href="#" class="list-group-item">Additional Voluntary Contribution</a>
+                <a href="#" class="list-group-item">Managed Funds</a>
+                <a href="#" class="list-group-item">Cross Border Services</a>
+                <a href="#" class="list-group-item">NSTIF</a>
+                <a href="#" class="list-group-item">Personal Messaging Services</a>
+            </div>
+        </div>
+    </div>
+    <footer class="container-fluid">
+        <hr class="hr-red">
+        <div class="row">
+            <div class="col col-sm-6 align-self-center newsHeader">
+                <h2>LATEST NEWS</h2>
             </div>
             <div class="col-xs-12 col-sm-6 newsFeed">
-                <ul>
-                    <li>
-                        <a href="#">
-                            <div class="media">
-                                <img class="d-flex align-self-center mr-3" src="images/vas.png" height="50px" width="50px">
-                                <div class="media-body">
-                                    <h5 class="mt-0">Leadway unveils value added services</h5>
-                                    <p>Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p>
-                                </div>
-                            </div>
-                        </a>
+                <ul class="list-unstyled">
+                    <li  class="media">
+                        <img class="d-flex align-self-center mr-3" src="images/vas.png" height="50px" width="50px">
+                        <div class="media-body">
+                            <h5 class="mt-0">Leadway unveils value added services</h5>
+                            <p>Following our masterplan to becoma a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
+                        </div>
                     </li>
-                    <li>
-                        <a href="#">
-                            <div class="media">
-                                <img class="d-flex align-self-center mr-3" src="images/vas.png" height="50px" width="50px">
-                                <div class="media-body">
-                                    <h5 class="mt-0">Leadway unveils value added services</h5>
-                                    <p>Following our masterplan to becoma a consumer oriented brand we have implemented... Read more</p>
-                                </div>
-                            </div>
-                        </a>
+                    <li class="media">
+                        <img class="d-flex align-self-center mr-3" src="images/vas.png" height="50px" width="50px">
+                        <div class="media-body">
+                            <h5 class="mt-0">Leadway unveils value added services</h5>
+                            <p>Following our masterplan to becoma a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="row">
-            <div role="navigation" class="col-md-6 exp navbar navbar-toggleable-md">
-                <button type="button" class="btn col-xs-12" data-toggle="collapse" data-target="#sign" aria-expanded="false" aria-controls="sign">Sign-Up for News Letter</button>
-                <div class="collapse navbar-collapse" id="sign">
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="E-mail Address" required>
-                        </div>
-                        <div align="center"><button type="button" class="btn btn-outline-secondary">Sign Up</button></div>
-                    </form>
-                </div>
+        <div class="row" style="margin-bottom: 10px">
+            <a class="col-md-6 btn-red" data-toggle="collapse" href="#sign" aria-expanded="false" aria-controls="sign">Sign-Up for News Letter</a>
+            <a class="col-md-6 btn-red" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</a>
+        </div>
+        <div class="row justify-content-around" style="margin-bottom: 10px">
+            <div class="col-md-4 collapse" id="sign">
+                <form>
+                    <div class="form-group">
+                        <input class="form-control form-control-sm" type="text" placeholder="E-mail Address" required>
+                    </div>
+                    <div align="center"><button type="button" class="btn btn-outline-red btn-sm">Sign Up</button></div>
+                </form>
             </div>
-            <div role="navigation" class="col-md-6 navbar navbar-toggleable-md">
-                <button type="button" class="btn col-xs-12" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</button>
-                <div class="collapse navbar-collapse" id="feed">
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="E-mail Address" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
-                        </div>
-                        <div align="center"><button type="button" class="btn btn-outline-secondary">Post Feedback</button></div>
-                    </form>
-                </div>
+            <div class="col-md-4 collapse" id="feed">
+                <form>
+                    <div class="form-group">
+                        <input class="form-control form-control-sm" type="text" placeholder="E-mail Address" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control form-control-sm" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
+                    </div>
+                    <div align="center"><button type="button" class="btn btn-outline-red btn-sm">Post Feedback</button></div>
+                </form>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
-                <h3> REGULATORY REQUIREMENTS </h3>
+            <div class="col-md-3">
+                <h6> REGULATORY REQUIREMENTS </h6>
                 <p> Regulatory Information<br>
                     Pension Reform Act <br>
                     Whistle Blowing<br>
@@ -103,8 +144,8 @@
                     Retired and Terminal Benefits
                 </p>
             </div>
-            <div class="col-md-4">
-                <h3> QUICK LINKS </h3>
+            <div class="col-md-3">
+                <h6> QUICK LINKS </h6>
                 <p> Blog <br>
                     Enroll Now<br>
                     Benefits<br>
@@ -112,56 +153,60 @@
                     Branch Network<br>
                 </p>
             </div>
-            <div class="col-md-4">
-                <h3> LEADERBOARD </h3>
-                <table class="table table-responsive">
+            <div class="col-md-3"></div>
+            <div class="col-md-3">
+                <h6> LEADERBOARD </h6>
+                <table class="table table-striped">
                     <thead>
-                    <tr>
-                        <th> Position </th>
-                        <th> Name </th>
-                        <th> Score </th>
-                    </tr>
+                        <tr>
+                            <th> #</th>
+                            <th> Name </th>
+                            <th> Score </th>
+                        </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <th>1.</th>
-                        <td> Ayo Thomas </td>
-                        <td> 10,000 </td>
-                    </tr>
-                    <tr>
-                        <th>2.</th>
-                        <td> Kemi Juba </td>
-                        <td> 9,432 </td>
-                    </tr>
-                    <tr>
-                        <th>3.</th>
-                        <td> Chinenye Dike </td>
-                        <td> 9,010 </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><i class="fa fa-facebook" aria-hidden="true"></i><i class="fa fa-twitter" aria-hidden="true"></i><i class="fa fa-linkedin" aria-hidden="true"></i></td>
-                        <td> View all </td>
-                    </tr>
+                        <tr>
+                            <th>1.</th>
+                            <td> Ayo Thomas </td>
+                            <td> 10,000 </td>
+                        </tr>
+                        <tr>
+                            <th>2.</th>
+                            <td> Kemi Juba </td>
+                            <td> 9,432 </td>
+                        </tr>
+                        <tr>
+                            <th>3.</th>
+                            <td> Chinenye Dike </td>
+                            <td> 9,010 </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
         <div class="row">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Site Map</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Privacy Policy</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Legal</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Terms & Conditions</a></li>
-            </ul>
+            <div class="col">
+                <ul class="nav justify-content-center" style="margin-top: 15px">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Site Map</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Privacy Policy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Legal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Terms & Conditions</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="row">
-            <div class="col-md-4"><img src="images/pencom.png" alt=""/></div>
-            <div class="col-md-4">Copyright Leadway Pensure 2017</div>
-            <div class="col-md-4">Web Design & Content by iNspire</div>
+            <div class="col-md-4 align-self-center"><img src="images/pencom.png" height="90" width="90" alt=""/></div>
+            <div class="col-md-4 align-self-center text-center">Copyright Leadway Pensure 2017</div>
+            <div class="col-md-4 align-self-center text-right">Web Design & Digital by iNspire</div>
         </div>
-        <div class="ball1" data-toggle="tooltip" title="Share" data-placement="left"><i class="fa fa-share-alt fa-lg" aria-hidden="true"></i></div>
-        <div class="ball2" data-toggle="tooltip" title="Print" data-placement="left"><i class="fa fa-print fa-lg" aria-hidden="true"></i></div>
-        <a class="ball3" href="#top" data-toggle="tooltip" title="Go to Top" data-placement="left"><i class="fa fa-arrow-up fa-lg" aria-hidden="true"></i></a>
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
