--- a/Default_Index.html
+++ b/Default_Index.html
@@ -169,6 +169,11 @@
     </nav>
     <!-- Body and Main Content of page -->
     <div class="container-fluid">
+    <div class="row"> 
+    <div class="col-12" style="height:300px;background-color:#b39fc2">
+    
+    </div>
+    </div>
     </div>
     <!-- Footer of page -->
     <footer class="container-fluid">
