--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    </style>
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -28,6 +32,10 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+    <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+   (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+   </script>
 </head>
 <body>
     <!-- Mobile navigation -->
@@ -576,26 +584,51 @@
                 </ul>
             </div>
         </div>
-        <div class="row" style="margin-bottom: 10px">
+        <div class="row" style="margin-bottom:10px">
             <a class="col-12 col-md-6 btn-red" data-toggle="collapse" href="#sign" aria-expanded="false" aria-controls="sign">Sign-Up for News Letter</a>
             <a class="col-12 col-md-6 btn-red" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</a>
         </div>
         <div class="row justify-content-around" style="margin-bottom: 10px">
             <div class="col-12 col-md-4 collapse" id="sign">
-                <form>
-                    <div class="form-group">
-                        <input class="form-control form-control-sm" type="text" placeholder="E-mail Address" required>
-                    </div>
-                    <div class="text-center"><button type="button" class="btn btn-outline-red btn-sm">Sign Up</button></div>
-                </form>
+
+<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="//leadway-pensure.us10.list-manage.com/subscribe/post?u=a7d286c921166498a0b699255&amp;id=c1b945e29f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll text-center">
+    <h2 class="text-center" style="color:#1d69a6"> Subscribe and recieve the Leading digest monthly! </h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group text-center">
+    <label for="mce-FNAME">First Name </label>
+    <input type="text" value="" name="FNAME" class="required chimp" id="mce-FNAME">
+</div>
+<div class="mc-field-group text-center">
+    <label for="mce-LNAME">Last Name </label>
+    <input type="text" value="" name="LNAME" class="required chimp" id="mce-LNAME">
+</div>
+<div class="mc-field-group text-center">
+    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+    <input type="email" value="" name="EMAIL" class="required email chimp" id="mce-EMAIL">
+</div>
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7d286c921166498a0b699255_c1b945e29f" tabindex="-1" value=""></div>
+    <div class="clear" align=center><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-red btn-sm" style=""></div>
+    </div>
+</form>
+</div>
+                <!--End mc_embed_signup-->
             </div>
             <div class="col-12 col-md-4 collapse" id="feed">
+             <h2 class="text-center" style="font-size:1.4em"> We'd love to hear from you </h2>
                 <form>
                     <div class="form-group">
-                        <input class="form-control form-control-sm" type="text" placeholder="E-mail Address" required>
+                        <input class="form-control form-control-sm chimp" type="text" placeholder="E-mail Address" required>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control form-control-sm" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
+                        <textarea class="form-control form-control-sm chimp" rows="3" cols="inherit" placeholder="Please write here" required></textarea>
                     </div>
                     <div class="text-center"><button type="button" class="btn btn-outline-red btn-sm">Post Feedback</button></div>
                 </form>
