Online page is up

--- a/services.html
+++ b/services.html
@@ -283,8 +283,33 @@
                 which were privately invested by an organization for or its authorized agents on behalf of its workers before the
                 Pension Reform Act 2004. They are usually treated as separate funds from the normal mandatory contributions.</p>
             </div>
-            <div class="col-12 col-md-9 fade tab-pane text-center" role="tabpanel" id="cbs">
-                <h1>Coming Soon!</h1>
+            <div class="col-12 col-md-9 fade tab-pane" role="tabpanel" id="cbs">
+                <p>Following the increasing interest by Nigerians abroad to take part in the Nigerian pension reform scheme, it is
+                pertinent to note that cross-border employment often leads to loss of pension rights as a result of waiting or vested
+                periods imposed by some schemes. Quite a number of schemes also do not allow for transfer of rights to countries they do
+                not have cross-border arrangement with.</p>
+                <p>One key objective of the guidelines on cross-border arrangement (CBA) is to seek to encourage the participation of Nigerians
+                abroad in the contributory pension scheme and assist them to save in Nigeria towards their old age and subsequent return.</p>
+                <p>The CBA shall involve the conditions and/or the set of guidelines under which Nigerian citizens serving in other countries
+                could participate in the Nigerian pension scheme. The CBA, therefore, makes provision for Nigerians in Diaspora, who may wish
+                to make voluntary contributions as provided in the Nigerian Pension Reform Act 2004.</p>
+                <p>The cross-border arrangement establishes a standard set of rules and procedures for foreign nationals and Nigerians resident
+                abroad to participate in the new contributory pension scheme. It also encourages participation of Nigerians abroad in the
+                contributory pension scheme and assists them to save in Nigeria towards their retirement and subsequent return.</p>
+                <p>Besides, it provides a platform to accommodate foreigners working in the country in the new scheme, thus guaranteeing a
+                better retirement life for them. Any foreign employee of a company registered in Nigeria shall, at his/her discretion, join the
+                scheme, without considering whether or not he/she has a pension arrangement in his/her home country. The employee shall inform
+                his employer of his interest to join the scheme.</p>
+                <p>Any Nigerian working abroad, who is interested in joining the new pension scheme, shall be allowed to participate by making
+                voluntary contributions. Nigerian employees of Nigerian institutions with offices abroad shall be allowed to participate in the
+                scheme. Where the employee joins a retirement benefit scheme abroad, he/she shall be allowed to repatriate his/her accumulated
+                benefits to his/her RSA with a PFA in Nigeria.</p>
+                <p>Any Nigerian employee already contributing into his/her RSA going on transfer to another country or leaving his/her employment
+                in the country for another employment abroad, shall notify his/her PFA through his/her previous employer. Pursuant to the above,
+                the employee shall indicate whether he/she intends to send voluntary contributions into the RSA.</p>
+                <p>A Nigerian previously working abroad shall be part of the scheme if upon his/her return to the country, secures an employment.
+                Where the Nigerian wants to repatriate his accrued benefits into his RSA, he/she shall obtain anti-money laundry clearance/approval
+                from relevant authorities in the home country (Nigeria) and the host country (where he was previously working).</p>
             </div>
             <div class="col-12 col-md-9 fade tab-pane" role="tabpanel" id="nst">
                 <p class="text-justify">The Pension Reform Act (PRA) 2004 made provision for contributions in the National
