--- a/company.html
+++ b/company.html
@@ -1018,8 +1018,23 @@
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade col-12 text-center" role="tabpanel" id="f-rep">
-                <h1>Coming Soon!</h1>
+            <div class="tab-pane fade col-12" role="tabpanel" id="f-rep">
+                <div class="row">
+                    <div class="col-12 col-md-6" style="padding-left: calc(10% - 15px)">
+                        <h2>Reports</h2>
+                        <p>Download and review our fund performance over the years</p>
+                        <ul>
+                            <li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="document/FinancialYearEndReport2016.pdf" target="_blank">2016</a></li>
+                            <li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="document/FinancialYearEndReport2015.pdf" target="_blank">2015</a></li>
+                            <li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="document/FinancialYearEndReport2014.pdf" target="_blank">2014</a></li>
+                            <li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="document/FinancialYearEndReport2013.pdf" target="_blank">2013</a></li>
+                            <li><i class="fa fa-chevron-right" aria-hidden="true"></i> <a href="document/FinancialYearEndReport2012.pdf" target="_blank">2012</a></li>
+                        </ul>
+                    </div>
+                    <div class="hidden-sm-down col-md-6 text-center">
+                        <img class="img-fluid" src="images/yearly-fin-rep.png">
+                    </div>
+                </div>
             </div>
             <div class="tab-pane fade col-12 text-center" role="tabpanel" id="csr">
                 <h1>Coming Soon!</h1>
