--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="bottom"></span>
         </div>
         <a href="index.html" class="m-logo navbar-brand">
-            <img src="images/logo-alt.png" class="img-responsive"  width="85" alt="">
+            <img src="images/logo-alt.png" class="img-responsive"  width="85" alt="Leadway Alternate Logo">
         </a>
         <form class="form-inline mob-search">
             <input class="form-control" type="text" placeholder="Search">
@@ -568,15 +568,15 @@
                     <li  class="media">
                         <img class="d-flex align-self-center mr-3" src="images/vas.png" alt="" height=50 width=50>
                         <div class="media-body">
-                            <h5 class="mt-0">Leadway unveils value added services</h5>
-                            <p>Following our masterplan to becoma a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
+                            <h5 class="mt-0">Leadway unveils Value Added Services</h5>
+                            <p>Following our master-plan to become a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
                         </div>
                     </li>
                     <li class="media">
                         <img class="d-flex align-self-center mr-3" src="images/vas.png" alt="" height=50 width=50>
                         <div class="media-body">
-                            <h5 class="mt-0">Leadway unveils value added services</h5>
-                            <p>Following our masterplan to becoma a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
+                            <h5 class="mt-0">Leadway unveils Mobile App</h5>
+                            <p>Following our master-plan to become a consumer oriented brand we have implemented... <a href="#">Read more</a></p>
                         </div>
                     </li>
                 </ul>
@@ -587,17 +587,14 @@
             <a class="col-12 col-md-6 btn-red" data-toggle="collapse" data-target="#feed" aria-expanded="false" aria-controls="feed">Give us your Feedback</a>
         </div>
         <div class="row justify-content-around" style="margin-bottom: 10px">
-            <div class="col-12 col-md-4 collapse" id="sign">
+            <div class="col-sm-10 col-md-4 collapse" id="sign">
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup" class="text-center">
                     <form action="//leadway-pensure.us10.list-manage.com/subscribe/post?u=a7d286c921166498a0b699255&amp;id=c1b945e29f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll text-center">
+                        <div id="mc_embed_signup_scroll" class="text-center">
                             <h2 style="color:#1d69a6"> Subscribe and receive the Leading digest monthly! </h2>
                             <div class="mc-field-group">
                                 <input type="text" value="" name="FNAME" class="required chimp text-center" id="mce-FNAME" placeholder="First Name">
-                            </div>
-                            <div class="mc-field-group">
-                                <input type="text" value="" name="LNAME" class="required chimp text-center" id="mce-LNAME" placeholder="Last Name">
                             </div>
                             <div class="mc-field-group">
                                 <input type="email" value="" name="EMAIL" class="required email chimp text-center" id="mce-EMAIL" placeholder="E-mail Address">
@@ -613,7 +610,7 @@
                 </div>
                 <!--End mc_embed_signup-->
             </div>
-            <div class="col-12 col-md-4 collapse" id="feed">
+            <div class="col-sm-10 col-md-4 collapse" id="feed">
                 <h2 class="text-center" style="font-size:1.4em"> We'd love to hear from you </h2>
                 <form>
                     <div class="form-group">
