--- a/social.html
+++ b/social.html
@@ -178,7 +178,7 @@
         </div>
     </nav>
     <!-- Body and Main Content of page -->
-    <div class="container-fluid" style="padding-bottom:92px";>
+    <div class="container-fluid" style="padding-bottom:92px">
     <div class="row"> 
     <div class="col-12" style="background-color:rgb(220, 232, 255)">
     <div class="row" id="social">
@@ -207,9 +207,9 @@
     </div>
     </div>
     </div>
-    <div class=row>
-    <div class="col-12 tab-content">
-    <div class="tab-pane active social-pane game" id="game" role="tabpanel" style="";>
+    <div class="row">
+    <div class="col-12 social tab-content">
+    <div class="tab-pane active social-pane game" id="game" role="tabpanel">
      <div class="row">
         <div class="col-12 col-sm-8"> 
          <div class=> 
