--- a/index.html
+++ b/index.html
@@ -269,16 +269,16 @@
                             <a class="nav-link" href="benefits.html"> Benefits </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="investment.html"> Investments </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="company.html"> Our Company </a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-brand mOff pOf logo" href="index.html"><img src="images/logo-alt.png" width="85" alt=""></a>
+                            <a class="nav-link"  href="career.html"> Careers </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  href="career.html"> Careers </a>
+                            <a class="navbar-brand mOff pOf logo" href="index.html"><img src="images/logo-alt.png" width="85" alt="Leadway Logo"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="investment.html"> Investments </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#"> News & Events </a>
